// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Touchable with ripple effect disables foreground in borderless mode 1`] = `
<DummyTouchableNativeFeedback
  background={undefined}
  borderlessRipple={true}
  disabled={false}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, .32)"
  style={null}
  useForeground={false}
>
  <View
    style={undefined}
  >
    <DummyTranslation
      id="line"
    />
  </View>
</DummyTouchableNativeFeedback>
`;

exports[`Touchable with ripple effect renders with foreground 1`] = `
<DummyTouchableNativeFeedback
  background={undefined}
  borderlessRipple={false}
  disabled={false}
  onPress={[Function]}
  rippleColor="rgba(0, 0, 0, .32)"
  style={null}
  useForeground={true}
>
  <View
    style={undefined}
  >
    <DummyTranslation
      id="line"
    />
  </View>
</DummyTouchableNativeFeedback>
`;

exports[`Touchable with ripple effect renders with ripple color 1`] = `
<DummyTouchableNativeFeedback
  background={undefined}
  borderlessRipple={false}
  disabled={false}
  onPress={[Function]}
  rippleColor="red"
  style={null}
  useForeground={true}
>
  <View
    style={undefined}
  >
    <DummyTranslation
      id="line"
    />
  </View>
</DummyTouchableNativeFeedback>
`;
